Codeforces/compiling_error.txt
C:\Users\Morgen\Documents\GitHub\cp\Codeforces\tesc.cpp:17:1: error: expected initializer before 'int'
 int main () {
 ^~~
